started working on main analysis: done with event selection

--- a/cuts_corrections.tex
+++ b/cuts_corrections.tex
@@ -158,7 +158,6 @@ kinematics for tracks passing these cuts is shown in Fig.~\ref{fig:momres_pp}.
 \centering{
 \includegraphics[width=0.75\textwidth]{figures/main/performance/TrkPerforPlots_5TeV_pp.pdf} }
 \caption{Track quantity comparison between data (points) and MC (yellow histogram) in \pp\ collisions.
- 
 Tracks are selected to have 4.2~$<\pttrk<$~10~GeV.
 Below each direct data and MC overlay is the 
 corresponding data to MC ratio.
@@ -173,7 +172,6 @@ and number of tracks, $N_{\mathrm{trk}}$, normalized $d_0$ (bottom left), and $z
 \includegraphics[width=0.75\textwidth]{figures/main/performance/TrkPerforPlots_PbPb_pt4p2_10p0GeV.pdf} }
 \caption{Track quantity comparison between data (points) and MC (yellow histogram) in 0-10\%
    central \pbpb\ collisions.
- 
 Tracks are selected to have 4.2~$<\pttrk<$~10~GeV.
 Below each direct data and MC overlay is the 
 corresponding data to MC ratio.
@@ -187,7 +185,6 @@ track $d_0$ (bottom left), and track $z_0 \sin\theta$ (bottom right).}
 \centering{
 \includegraphics[width=0.75\textwidth]{figures/main/performance/TrkPerforPlots_PbPb_pt60_200GeV.pdf} }
 \caption{Track quantity comparison between data (points) and MC (yellow histogram) in \pbpb\ collisions inclusive in collisions centrality.
- 
 Tracks are selected to have 60~$<\pttrk<$~200~GeV and to originate from jet with \pt\ in the interval from 251 to 316 GeV.
 Below each direct data and MC overlay is the 
 corresponding data to MC ratio.
@@ -206,13 +203,10 @@ track $d_0$ (bottom left), and track $z_0 \sin\theta$ (bottom right).}
 \end{tabular}}
 \caption{(left) Comparison of the generated and reconstructed track \pt\ as a function of \etatrktruth\ for 
 five track \pttrktruth\ selections.
-
 (right) Track momentum resolution as a function of \etatrktruth\ for five \pttrktruth\ selections.
 Both plots are for \pp\ MC.
- 
 All tracks shown in this plot have passed the 2015 default tracking cuts defined in this section.
-The \pt\ in the legend corresponds to the bin centers in the following track \pt\ bins: 1.3 -- 1.8 GeV, 5.6 -- 7.5 GeV, 13.3 -- 17.7 GeV, 56.1 -- 74.8 GeV, 99.7 -- 132.9 GeV, \mbox{177.2 -- 236.2 GeV}
- }
+The \pt\ in the legend corresponds to the bin centers in the following track \pt\ bins: 1.3 -- 1.8 GeV, 5.6 -- 7.5 GeV, 13.3 -- 17.7 GeV, 56.1 -- 74.8 GeV, 99.7 -- 132.9 GeV, \mbox{177.2 -- 236.2 GeV}}
 \label{fig:momres_pp}
 \end{figure}
 
@@ -412,21 +406,17 @@ The fake rate is evaluated for default value of $MC_{\mathrm{prob}}$ cut of 0.3 
      }
      \caption{ Rate of tracks unmatched to truth tracks
 	in \pbpb\ collisions for different centrality selections as indicated on the plot as a function of \pttrk.
- 
 	The unmatched tracks include both fake tracks and tracks from the underlying event.
  The panels show
 	two \ptjet\ selections: 126-158~GeV (left) and 251-316~GeV (right).
 The low \pT\ part is omitted as it is dominated by the contribution from the UE.}
      \label{fig:fakeratepbpb}
   \end{figure}
-
   \begin{figure}[ht]
   \centerline{
-	   \includegraphics[width=1.\textwidth]{figures/main/performance/fake_rate_hijingMB.pdf}
-	   }
+	   \includegraphics[width=1.\textwidth]{figures/main/performance/fake_rate_hijingMB.pdf}}
      \caption{ Fake rate for six different centrality intervals in 5.02 TeV \pbpb\ HIJING MC collisions.
-The fake rate is evaluated for default value of $\mathrm{MC_{Probcut}}$ of 0.3 used in 2015 analysis.
-}
+The fake rate is evaluated for default value of $\mathrm{MC_{Probcut}}$ of 0.3 used in 2015 analysis.}
      \label{fig:fakeratehijing}
   \end{figure}
 
