--- a/jet_calibration.tex
+++ b/jet_calibration.tex
@@ -35,6 +35,31 @@ where $a$ and $c$ are related to the detector response.
 The $b$ term describes the underlying event fluctuations and depends on centrality.
 The large underlying event in central collisions results in the JER being the largest in that centrality interval. 
 
+The $\eta$ and $\phi$ position resolution of the jet can be derived via a similar procedure and is shown in Figure~\ref{fig:jet_posResolution} as a function of the \pttruth.
+
+
+
+\begin{figure}
+\centering
+\begin{subfigure}{.45\textwidth}
+  \centering
+  \includegraphics[width=\linewidth]{figures/setup/jet_res_eta_r04.pdf}}
+          \caption{}
+          \label{fig:nch_fcal}
+\end{subfigure}
+\qquad  \qquad  
+\begin{subfigure}{.45\textwidth}  
+  \centering
+  \includegraphics[width=\linewidth]{figures/setup/jet_res_phi_r04.pdf}}
+          \caption{}
+          \label{fig:fcal_distr}
+\end{subfigure}
+\caption{The (left) $\eta$ and (right) $\phi$ position resolution of the jet as a function of \pttruth\ in \pbpb\ collisions at $\sqrtsnn = 5.02$ TeV for different centrality and $\eta$ regions.
+Figure taken from Ref.~\cite{Puri:2304504}.}
+\label{fig:jet_posResolution}
+\end{figure}
+
+
 
 
 %The final corrections come from data driven (\insitu) methods like \pt\ balance studies (comparing the \pt\ of a jet and any other object like another jet, Z, or $\gamma$). Heavy ion collisions however, have the limitation that simple \pt\ balance studies are non-trivial because of jet quenching effects. Another limitation is the lack of high statistics for reference objects like $Z$'s and photons. The way to get around this is to derive a \textit{cross}-calibration, based on comparing jets in \pp\ collisions, as reconstructed by the heavy ion and \pp\ jet reconstruction algorithms. The HI jets can then be scaled with factors given by the ratio of $\langle \pt ^\hi / \pt^\emt \rangle$ in data and MC.
