--- a/mainAnalysis.tex
+++ b/mainAnalysis.tex
@@ -3,81 +3,60 @@
 
 \section{Overview}
 
-Heavy ion collisions at collider energies are performed in order to produce and study QCD matter at high temperature, the quark-gluon plasma (QGP).
- 
-Measurements of jets in such collisions are powerful tools to determine the properties of this matter by measuring the modification of jet production and fragmentation after the jets have traversed the hot QCD matter.
-The rates of jet production~\cite{Abelev:2013kqa,Aad:2014bxa,Khachatryan:2016odn} and their correlations~\cite{Aad:2010bu} are observed to be modified in a centrality dependent manner in \PbPb\ collisions at 2.76~TeV and 5.02~TeV\cite{ATLAS:2017wvp}.
-In addition, the longitudinal momentum distribution of charged particles within jets measured is observed to be modified as well~\cite{Aad:2014wha,Chatrchyan:2014ava, Aaboud:2017bzv,PbPb5TeVIntNote}.
-Significant modifications of the jet fragmentation are observed, including an excess of particles with transverse momentum (\pT) less than about 4~GeV.
-The excess is observed to increase with both centrality and the transverse momentum of the jet (\pTjet).
-However, these measurements are insensitive to the angular distribution of charged particles within the jet and particles outside of the jet cone.
-This information is crucial to understanding how the jet interacts with the hot QCD matter created in \pbpb\ collisions at the LHC.
-The measurement of the particle distributions at large angles outside the jet cone provides information about the flow of transverse momentum lost by the jet due to the jet quenching phenomena.
-The angular distribution of the soft particles around the jet is a key feature of models of the interaction of the jets with the hot QCD matter~\cite{Blaizot:2014ula,Brewer:2017fqy} and the response of the QCD matter to the propagation of the jet~\cite{Tachibana:2017syd,Yan:2017rku}.
+Measurements of jets in heavy ion collisions are powerful tools to determine the properties of this matter by measuring the modification of jet production and fragmentation after the jets have traversed the hot QCD matter.
+As discussed in Section~\ref{sec:jetMeasurements}, jets with large transverse momenta in central lead-lead (\pbpb) collisions at the LHC are measured at approximately half the rates in \pp\ collisions when the nuclear overlap function of \pbpb\ collisions is taken into account~\cite{Abelev:2013kqa,Aad:2014bxa,Adam:2015ewa,Khachatryan:2016jfl, Khachatryan:2016odn, 2019108}.
+Back-to-back dijet~\cite{Aad:2010bu,Chatrchyan:2011sx,Aaboud:2017eww} and photon-jet pairs~\cite{Chatrchyan:2012gt,2019167} are observed to have less balanced transverse momenta in \pbpb\ collisions compared to \pp\ collisions.
+Jet shape measurements in the \pp\ and \pbpb\ collision systems have shown a broadening of the jets due to the QGP~\cite{Aad:2011sc, Acharya:2018uvf, Chatrchyan:2012mec, Chatrchyan:2013kwa}, and jet fragmentation functions in \pbpb\ collisions are modified with an excess for low and high momentum particles and depletion of intermediate momentum particles inside the jet compared to pp collisions~\cite{Aad:2014wha,Chatrchyan:2014ava,Aaboud:2017bzv,PhysRevC.98.024908}.
+Particles carrying a large fraction of the jet momentum are generally closely aligned with the jet axis, whereas low momentum particles are observed to have a much broader angular distribution extending outside the jet~\cite{Chatrchyan:2011sx,Khachatryan2016,Khachatryan:2016tfj,Sirunyan:2018jqr}.
+All these studies have suggested that the energy lost via jet-quenching is being transferred to soft particles around the jet axis via soft gluon emission~\cite{Vitev:2008rz,Ovanesyan:2011xy,Blaizot:2014ula,Qin:2015srf,Escobedo:2016jbm,Casalderrey-Solana:2016jvj,Tachibana:2017syd} and investigating the radial distribution of particles as a function of transverse momentum has the potential to provide further insight into on the structure of jets in the QGP.
+This can help provide information on not only how the jet is affected by the plasma, but also how the plasma is affected by the jet. 
 
-In this note, a measurement of the angular and transverse momentum distributions of tracks around the jet axis is presented.
-The distributions are presented as a function of centrality and \pTjet.
-In order to quantify the effects due to the presence of the hot QCD matter, the same quantities are measured in \pp\ collisions at the same collision energy to provide a baseline of unmodified jets.
-
-In this analysis, we extend previous ATLAS fragmentation studies by measuring of the angular distributions of charged particles around the jet axis, including those outside the jet cone.
-Previous measurements from CMS~\cite{Khachatryan:2016tfj,CMSPASHIN16020} have studied similar correlations.
-This measurement extends those by including the \pTjet\ dependence of the correlations and by utilizing unfolding such that detector effects are removed from the final results.
-
-
-
-
-
-
-Ultra-relativistic nuclear collisions at the Large Hadron Collider (LHC) produce hot, dense matter called the quark-gluon plasma, QGP (see Refs.~\cite{Roland:2014jsa,Busza:2018rrf} for recent reviews).
-Jets from hard-scattering processes in these collisions traverse and interact with the QGP, losing energy via a process called jet-quenching.
-The rates and characteristics of these jets in heavy-ion collisions can be compared to the same quantities in \pp\ collisions, where we do not expect the production of QGP.
-This comparison can provide information on the properties of the QGP and how it interacts with partons from the hard scatter.
-
-Jets with large transverse momenta in central lead-lead (\pbpb) collisions at the LHC are measured at approximately half the rates in \pp\ collisions when the nuclear overlap function of \pbpb\ collisions is taken into account~\cite{Abelev:2013kqa,Aad:2014bxa,Adam:2015ewa,Khachatryan:2016jfl, 2019108}.
-Similarly, back-to-back dijet~\cite{Aad:2010bu,Chatrchyan:2011sx,Aaboud:2017eww} and photon-jet pairs~\cite{Chatrchyan:2012gt,Aaboud:2018anc} are observed to have less balanced transverse momenta in \pbpb\ collisions compared to \pp\ collisions.
-These observations suggest that some of the energy from the hard-scattered parton may be transferred outside of the jet through its interaction with the QGP medium.
- 
-Complementary measurements look at how the structure of jets is different between \pbpb\ and \pp\ collisions.
-Jet shape measurements in the \pp\ and \pbpb\ collision systems have shown a broadening of the jets due to the QGP~\cite{Aad:2011sc, Acharya:2018uvf, Chatrchyan:2012mec, Chatrchyan:2013kwa}.
-Additionally, measurements of jet fragmentation functions at the LHC show an excess, in PbPb collisions, of low and high momentum particles with a depletion of intermediate momentum particles inside the jet compared to pp collisions~\cite{Aad:2014wha,Chatrchyan:2014ava,Aaboud:2017bzv,Aaboud:2018hpb}.
-Particles carrying a large fraction of the jet momentum are generally closely aligned with the jet axis, whereas low momentum particles are observed to have a much broader angular distribution extending outside the jet~\cite{Chatrchyan:2011sx,Khachatryan:2015lha,Khachatryan:2016tfj,Sirunyan:2018jqr}.
-These observations suggest that the energy lost via jet-quenching is being transferred to soft particles around the jet axis via soft gluon emission~\cite{Vitev:2008rz,Ovanesyan:2011xy,Blaizot:2014ula,Qin:2015srf,Escobedo:2016jbm,Casalderrey-Solana:2016jvj,Tachibana:2017syd}.
-Measurements of yields of these particles as a function of transverse momentum and angular distance between the particle and the jet axis have a potential to provide further insight into on the structure of jets in the QGP, as well as provide information on how the medium is affected by the presence of the jet.
-
-
-This paper presents charged-particle \pt\ distributions around the jet axis that have been corrected for detector effects.
+This paper presents charged-particle \pt\ distributions around the jet axis as shown in Figure~\ref{fig:cartoon_dptr}. 
 The measured yields are defined as:
 
-\begin{align*}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.7\textwidth]{figures/main/general/cartoon_dptr}
+\caption{A schematic showing the distribution of tracks inside and outside a jet cone of radius R.}
+\label{fig:cartoon_dptr}
+\end{figure}
+
+
+\begin{align}
 \Dptr = \frac{1}{N_{\mathrm{jet}}} \frac{1}{A} \frac{\mathrm{d} n_{\mathrm{ch}} (\pt, r)}{\mathrm{d} \pt},
 %%%
 %D(\pt,\ptjet) = \frac{1}{N_{\mathrm{jet}}} ~ \frac{1}{\epsilon(\pttrk)} ~ \frac{\mathrm{d} N_{\mathrm{ch}}}{\mathrm{d} \pt}~(\ptjet).
 %%%
-\end{align*}
-where $r = \sqrt{\Delta \eta^2 + \Delta \phi^2}$ \footnote{ATLAS uses a right-handed coordinate system with its origin at the nominal interaction point (IP) in the centre of the detector, and the $z$-axis along the beam pipe.
-The $x$-axis points from the IP to the centre of the LHC ring, and the $y$-axis points upward.
-Cylindrical coordinates $(r,\phi)$ are used in the transverse plane, $\phi$ being the azimuthal angle around the $z$-axis.
-The pseudorapidity is defined in terms of the polar angle $\theta$ as $\eta=-\ln\tan(\theta/2)$.
-The rapidity is defined as $y = 0.5\text{ln}[(E + p_z)/(E-p_z)]$ where $E$ and $p_z$ are the energy and $z$-component of the momentum along the beam direction respectively.
-Transverse momentum and transverse energy are defined as $\pt = p \sin\theta$ and $\Et = E \sin\theta$, respectively.
-The angular distance between two objects with relative differences $\Delta \eta$ and $\Delta \phi$ in pseudorapidity and azimuth respectively is given by $\sqrt{(\Delta \eta )^2 + (\Delta \phi)^2}$.} 
-is the angular distance from the jet axis and $N_{\mathrm{jet}}$ is the number of jets in consideration.
+\end{align}
+where $r = \sqrt{\Delta \eta^2 + \Delta \phi^2}$ is the angular distance from the jet axis and $N_{\mathrm{jet}}$ is the number of jets in consideration.
 $A = \pi (r_{\mathrm{max}}^2 - r_{\mathrm{min}}^2) $ is the area of an annulus around the jet axis with its inner and outer radii $r_{\mathrm{min}}$ and $r_{\mathrm{max}}$ respectively and $n_{\mathrm{ch}}(\pt, r)$ is the number of charged particles with a given \pt\ within the annulus.
+The boundaries of the annuli are given by: 0.0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8.
 The ratios of the charged-particle yields measured in \pbpb\ and \pp\ collisions,
 
-\begin{align*}
+\begin{align}
    \RDptr = \frac{\Dptr_\mathrm{Pb+Pb}}{\Dptr_{\pp}},
-\end{align*}
+\end{align}
 quantify the modifications of the yields due to the QGP medium.
 Furthermore, the differences between the \Dptr\ distributions in \pbpb\ and \pp\ collisions, 
 
-\begin{align*}
+\begin{align}
    \Delta \Dptr = \Dptr_\mathrm{Pb+Pb} - \Dptr_{pp},
-\end{align*}
+\end{align}
 allow for measuring the absolute differences in charged-particle yields between the two collision systems.
 
+The following sections describe all details of this analysis as follows:
+
+\begin{itemize}
+\item The datasets used for this analysis are discussed in Section~\ref{sec:used_data}
+\item The different event selection criteria are discussed in \ref{sec:event_selection}
+\item The cuts and corrections applied in the analysis procedure are discussed in  \ref{sec:cuts_corrections}
+\item The various sources of systematic uncertainties and their sizes are discussed in \ref{sec:systematic}
+\item The results of this analysis are described in \ref{sec:results}
+\item The results of the analysis are further discussed and interpreted in \ref{sec:discussion}
+\end{itemize}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%
 %The analysis is done using 0.49~nb$^{-1}$ of \pbpb\ collisions and 
 %25~pb$^{-1}$ of \pp\ collisions at center-of-mass energy of 5.02~\TeV\ collected in 2015 by ATLAS.
 
@@ -86,29 +65,12 @@ allow for measuring the absolute differences in charged-particle yields between 
 %Charged particles associated with these jets are restricted to $|\eta| < 2.5$ and have a transverse momenta of $\pt > 1$ GeV.
 %The measurement is done in annuli at increasing distances from the jet axis.
 %These annuli have their inner and outer radius $r_{\textrm{min}}$ and $r_{\textrm{max}}$ and take the following values: 0.0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8.
+%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
-
-
-This section discusses the main analysis undertaken by the author.
-This chapter is divided into the sections detailed below:
-
-\begin{itemize}
-\item \ref{sec:trkjet_corr_measurement} defines and discusses the quantity measured,
-%\item \ref{sec:used_data} discusses the datasets used
-\item \ref{sec:event_selection} describes the various event selection criteria
-\item \ref{sec:cuts_corrections} describes the cuts and corrections applied to the measured quantities
-\item \ref{sec:systematic} discusses the systematic uncertainties
-\item \ref{sec:results} describes the results
-\item \ref{sec:discussion} goes into a discussion of the results.
-
-\end{itemize}
-
-\section{Definition of Measured Quantities}
-\label{sec:trkjet_corr_measurement}
-\input{trkjet_corr_measurement.tex}
-
+%\section{Definition of Measured Quantities}
+%\label{sec:trkjet_corr_measurement}
+%\input{trkjet_corr_measurement.tex}
+%
 \section{Input Data}
 \label{sec:used_data}
 \input{used_data.tex}
@@ -117,9 +79,9 @@ This chapter is divided into the sections detailed below:
 \label{sec:event_selection}
 \input{event_selection.tex}
 
-\section{Jet Reconstruction}
-\label{sec:reconstruction}
-\input{reco.tex}
+%\section{Jet Reconstruction}
+%\label{sec:reconstruction}
+%\input{reco.tex}
 
 \section{Basic Cuts and Corrections}
 \label{sec:cuts_corrections}
