--- a/setup.tex
+++ b/setup.tex
@@ -244,6 +244,7 @@ This event rate is further reduced to 200 Hz by the HLT that uses the full granu
 
 
 \section{Pileup and Centrality in ATLAS}
+\label{sec:centrality}
 \input{centrality.tex}
 
 \section{Jet Reconstruction for Heavy Ion Collisions in ATLAS}
