--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1956,18 +1956,21 @@ SLACcitation   = "%%CITATION = NUCL-EX/9805001;%%"
 }
 
 @Article{Khachatryan2016,
-author="{The CMS collaboration}",
-title="{Measurement of transverse momentum relative to dijet systems in PbPb and pp collisions at \sqrtsnn = 2.76 TeV}",
-journal="Journal of High Energy Physics",
-year="2016",
-month="Jan",
-day="04",
-volume="2016",
-number="1",
-pages="6",
-issn="1029-8479",
-doi="10.1007/JHEP01(2016)006",
-url="https://doi.org/10.1007/JHEP01(2016)006"
+author         = "{CMS Collaboration}",
+title          = "{Measurement of transverse momentum relative to dijet
+systems in PbPb and pp collisions at $
+\sqrt{s_{\mathrm{NN}}}=2.76 $ TeV}",
+collaboration  = "CMS",
+journal        = "JHEP",
+volume         = "01",
+year           = "2016",
+pages          = "006",
+doi            = "10.1007/JHEP01(2016)006",
+eprint         = "1509.09029",
+archivePrefix  = "arXiv",
+primaryClass   = "nucl-ex",
+reportNumber   = "CMS-HIN-14-010, CERN-PH-EP-2015-260",
+SLACcitation   = "%%CITATION = ARXIV:1509.09029;%%"
 }
 
 
@@ -3288,10 +3291,8 @@ reportNumber   = "CMS-HIN-11-010, CERN-PH-EP-2012-089",
 SLACcitation   = "%%CITATION = ARXIV:1205.0206;%%"
 }
 @article{Khachatryan:2016odn,
-author         = "Khachatryan, Vardan and others",
-title          = "{Charged-particle nuclear modification factors in PbPb
-and pPb collisions at $
-\sqrt{s_{\mathrm{N}\;\mathrm{N}}}=5.02 $ TeV}",
+author         = "{CMS Collaboration}",
+title          = "{Charged-particle nuclear modification factors in PbPb and pPb collisions at $\sqrt{s_{\mathrm{NN}}}=5.02 $ TeV}",
 collaboration  = "CMS",
 journal        = "JHEP",
 volume         = "04",
@@ -3520,18 +3521,7 @@ primaryClass   = "nucl-ex",
 reportNumber   = "CERN-EP-2017-191",
 SLACcitation   = "%%CITATION = ARXIV:1709.02301;%%"
 }
-@article{Khachatryan:2016odn,
-author         = "{CMS Collaboration}",
-title          = "{Charged-particle nuclear modification factors in PbPb
-and pPb collisions at sqrt(s[NN)]=5.02 TeV}",
-collaboration  = "CMS",
-year           = "2016",
-eprint         = "1611.01664",
-archivePrefix  = "arXiv",
-primaryClass   = "nucl-ex",
-reportNumber   = "CMS-HIN-15-015, CERN-EP-2016-242",
-SLACcitation   = "%%CITATION = ARXIV:1611.01664;%%"
-}
+
 @article{ATLAS2014021,
 author = "{ATLAS Collaboration}",
 title = "{ATLAS Run 1 Pythia8 tunes}",
@@ -3984,17 +3974,23 @@ Year = {2013},
   }
 
 
-  @article{2019167,
-  title = "Measurement of photon-jet transverse momentum correlations in 5.02 TeV Pb+Pb and pp collisions with ATLAS",
-  journal = "Physics Letters B",
-  volume = "789",
-  pages = "167 - 190",
-  year = "2019",
-  issn = "0370-2693",
-  doi = "https:/doi.org/10.1016/j.physletb.2018.12.023",
-  nourl = "http://www.sciencedirect.com/science/article/pii/S037026931830950X",
-  author = "{ATLAS Collaboration}",
-  }
+@article{2019167,
+author         = "{ATLAS Collaboration}",
+title          = "{Measurement of photon–jet transverse momentum
+correlations in 5.02 TeV \pbpb\ and $pp$ collisions with
+ATLAS}",
+collaboration  = "ATLAS",
+journal        = "Phys. Lett. B",
+volume         = "789",
+year           = "2019",
+pages          = "167-190",
+doi            = "10.1016/j.physletb.2018.12.023",
+eprint         = "1809.07280",
+archivePrefix  = "arXiv",
+primaryClass   = "nucl-ex",
+reportNumber   = "CERN-EP-2018-196",
+SLACcitation   = "%%CITATION = ARXIV:1809.07280;%%"
+}
 
   @unpublished{twiki_MC15c,
   title = "ATLAS Production Group MC15c Twiki",
@@ -4181,21 +4177,6 @@ nourldate = {2019-06-20},
   }
 
 
-  @techreport{ref:centrality,
-  author        = "Perepelitsa, Dennis and Steinberg, Peter and Zhou,
-  Mingliang and Radhakrishnan, Sooraj Krishnan and Tapia
-  Araya, Sebastian",
-  title         = "{Centrality determination in $\sqrt{s_\mathrm{NN}} = 5.02$
-  TeV Pb+Pb collision data in 2015}",
-  institution   = "CERN",
-  address       = "Geneva",
-  number        = "ATL-COM-PHYS-2016-1287",
-  month         = "9",
-  year          = "2016",
-  reportNumber  = "ATL-COM-PHYS-2016-1287",
-  nourl           = "https://cds.cern.ch/record/2212936",
-  }
-
   @techreport{cc2015,
   author        = "Puri, Akshat",
   title         = "{Cross calibration factors and their uncertainties for
@@ -4337,4 +4318,129 @@ title     = "Modern Particle Physics",
 publisher = "Oxford University Press",
 year      = "2000",
 address   = "Oxford, UK"
+}
+
+@article{Adam:2015ewa,
+author         = "{ALICE Collaboration}",
+title          = "{Measurement of jet suppression in central Pb-Pb collisions at $\sqrt{s_{\mathrm{NN}}} = 2.76$ TeV}",
+collaboration  = "ALICE",
+journal        = "Phys. Lett. B",
+volume         = "746",
+year           = "2015",
+pages          = "1-14",
+doi            = "10.1016/j.physletb.2015.04.039",
+eprint         = "1502.01689",
+archivePrefix  = "arXiv",
+primaryClass   = "nucl-ex",
+reportNumber   = "CERN-PH-EP-2015-023",
+SLACcitation   = "%%CITATION = ARXIV:1502.01689;%%"
+}
+
+@article{Aad:2011sc,
+author         = "{ATLAS Collaboration}",
+title          = "{Measurement of the jet fragmentation function and
+transverse profile in proton-proton collisions at a
+center-of-mass energy of 7 TeV with the ATLAS detector}",
+collaboration  = "ATLAS",
+journal        = "Eur.~Phys.~J.~C",
+volume         = "71",
+year           = "2011",
+pages          = "1795",
+doi            = "10.1140/epjc/s10052-011-1795-y",
+eprint         = "1109.5816",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ex",
+reportNumber   = "CERN-PH-EP-2011-148",
+SLACcitation   = "%%CITATION = ARXIV:1109.5816;%%"
+}
+
+@article{Acharya:2018uvf,
+author         = "{ALICE Collaboration}",
+title          = "{Medium modification of the shape of small-radius jets in
+central Pb-Pb collisions at $\sqrt{s_{\mathrm {NN}}} = 2.76 $ TeV}",
+collaboration  = "ALICE",
+journal        = "JHEP",
+volume         = "10",
+year           = "2018",
+pages          = "139",
+doi            = "10.1007/JHEP10(2018)139",
+eprint         = "1807.06854",
+archivePrefix  = "arXiv",
+primaryClass   = "nucl-ex",
+reportNumber   = "CERN-EP-2018-201",
+SLACcitation   = "%%CITATION = ARXIV:1807.06854;%%"
+}
+
+@article{Chatrchyan:2012mec,
+author         = "{CMS Collaboration}",
+title          = "{Shape, transverse size, and charged-hadron multiplicity of jets in pp collisions at $\sqrt{s}=7$ TeV}",
+collaboration  = "CMS",
+journal        = "JHEP",
+volume         = "06",
+year           = "2012",
+pages          = "160",
+doi            = "10.1007/JHEP06(2012)160",
+eprint         = "1204.3170",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ex",
+reportNumber   = "CMS-QCD-10-029, CERN-PH-EP-2012-079",
+SLACcitation   = "%%CITATION = ARXIV:1204.3170;%%"
+}
+
+@article{Vitev:2008rz,
+author         = "Vitev, Ivan and Wicks, Simon and Zhang, Ben-Wei",
+title          = "{A theory of jet shapes and cross sections: from hadrons
+to nuclei}",
+journal        = "JHEP",
+volume         = "11",
+year           = "2008",
+pages          = "093",
+doi            = "10.1088/1126-6708/2008/11/093",
+eprint         = "0810.2807",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ph",
+SLACcitation   = "%%CITATION = ARXIV:0810.2807;%%"
+}
+
+@article{Ovanesyan:2011xy,
+author         = "Ovanesyan, Grigory and Vitev, Ivan",
+title          = "{An effective theory for jet propagation in dense QCD
+matter: jet broadening and medium-induced bremsstrahlung}",
+journal        = "JHEP",
+volume         = "06",
+year           = "2011",
+pages          = "080",
+doi            = "10.1007/JHEP06(2011)080",
+eprint         = "1103.1074",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ph",
+SLACcitation   = "%%CITATION = ARXIV:1103.1074;%%"
+}
+
+@article{Escobedo:2016jbm,
+author         = "Escobedo, Miguel A. and Iancu, Edmond",
+title          = "{Event-by-event fluctuations in the medium-induced jet
+evolution}",
+journal        = "JHEP",
+volume         = "05",
+year           = "2016",
+pages          = "008",
+doi            = "10.1007/JHEP05(2016)008",
+eprint         = "1601.03629",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ph",
+SLACcitation   = "%%CITATION = ARXIV:1601.03629;%%"
+}
+
+@techreport{Puri:2304504,
+      author        = "Puri, Akshat and Rybar, Martin and Sickles, Anne Marie",
+      title         = "{Correlations between jets and charged particles in Pb+Pb
+                       Collisions at 5.02 TeV}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2018-130",
+      month         = "Feb",
+      year          = "2018",
+      reportNumber  = "ATL-COM-PHYS-2018-130",
+      url           = "https://cds.cern.ch/record/2304504",
 }
