--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -129,35 +129,35 @@ For my Mother, Father, and Brother
 \mainmatter
 %-------------------------------------------------------------------------------
 
-%\chapter{Introduction}
-%\label{sec:intro}
-%\input{thesisintro.tex}
+%%%%%%\chapter{Introduction}
+%%%%%%\label{sec:intro}
+%%%%%%\input{thesisintro.tex}
 
 \chapter{Introduction}
 \label{sec:theory}
 \input{theory.tex}
 \clearpage
 
-\chapter{Major Jet Measurements}
-\label{sec:jetMeasurements}
-\input{jetMeasurements.tex}
-\clearpage
-
-\chapter{Jet Energy Loss Models}
-\label{sec:jetModels}
-\input{jetModels.tex}
-\clearpage
-
-\chapter{Experimental Setup}
-\label{sec:setup}
-\input{setup.tex}
-\clearpage
-
-%\chapter{ATLAS Qualification Task}
-%\label{sec:qualification}
-%\input{qualification.tex}
+%\chapter{Major Jet Measurements}
+%\label{sec:jetMeasurements}
+%\input{jetMeasurements.tex}
 %\clearpage
 %
+%\chapter{Jet Energy Loss Models}
+%\label{sec:jetModels}
+%\input{jetModels.tex}
+%\clearpage
+%
+%\chapter{Experimental Setup}
+%\label{sec:setup}
+%\input{setup.tex}
+%\clearpage
+
+%%%%%%\chapter{ATLAS Qualification Task}
+%%%%%%\label{sec:qualification}
+%%%%%%\input{qualification.tex}
+%%%%%%\clearpage
+
 \chapter{Measurement of Angular Correlations Between Tracks And Jets}
 \label{sec:mainanalysis}
 \input{mainAnalysis.tex}
