--- a/used_data.tex
+++ b/used_data.tex
@@ -58,7 +58,7 @@ Since the analysis only used jets above 100 GeV, the appropriate triggers were s
 For \pp, only the {\footnotesize{HLT\_j85}} trigger (fully efficient above 88.8 GeV) was used.
 For \pbpb\, the only trigger used was the {\footnotesize{HLT\_j75\_ion\_L1TE50}} (fully efficient above 91 GeV).
    
-  The performance of the jet trigger in 2015 is described in~\cite{HITMF} and the trigger efficiency is presented in Figure~\ref{Fig:Trigger_pp5} (\pp\ collisions) and Figure~\ref{fig:Trigger_PbPb} (\pbpb\ collisions).
+The performance of the jet trigger in 2015 is described in~\cite{HITMF} and the trigger efficiency is presented in Figure~\ref{fig:Trigger_pp5} (\pp\ collisions) and Figure~\ref{fig:Trigger_PbPb} (\pbpb\ collisions).
 The trigger efficiency for two low thresholds is evaluated using MB events.
 The low \pT\ thresholds are used as the reference to evaluate the performance at higher \pT.
 The efficiency for the higher threshold is bootstraped from lower thresholds.
@@ -69,7 +69,7 @@ The broader turn-on of the jet trigger in \pbpb\ compared to \pp\ collisions is 
  \includegraphics[width=0.75\textwidth]{figures/main/general/Eff_pp_5TeV_central.pdf}
 }
  \caption{Trigger efficiencies for R=0.4 offline jets for seven HLT jet triggers in \pp\ collisions at 5.02 TeV.}
- \label{Fig:Trigger_pp5}
+\label{fig:Trigger_pp5}
  \end{figure}
 
 
@@ -84,7 +84,7 @@ The broader turn-on of the jet trigger in \pbpb\ compared to \pp\ collisions is 
 
 In addition to the jet triggered sample, a MB triggered sample defined by a logical OR of the total energy trigger with a threshold of 50~\GeV\ and the ZDC coincidence trigger was used as part of the MC overlay procedure
 
-The event fraction as a function of run number for both the hard probes stream and the minimum bias overlay stream in \pbpb\ is shown in Fig.~\ref{fig:evnt_fraction}
+The event fraction as a function of run number for both the hard probes stream and the minimum bias overlay stream in \pbpb\ is shown in Figure~\ref{fig:evnt_fraction}
 
  \begin{figure}[h]
     \centerline{
@@ -95,7 +95,7 @@ The event fraction as a function of run number for both the hard probes stream a
  \end{figure}
 
 The run dependence of the underlying event (a core part of this measurement) was tested by dividing the data and MC into three periods with approximately equal number of events in each period: 286711 -- 287259, 287270 -- 287632, and 287706 -- 287931.
-The underlying event determined for each period compared to the nominal underlying event evaluated for the entire dataset is shown in Fig.\ref{fig:weighted_runs}, and it can be seen that the UE is stable throughout the data taking period.
+The underlying event determined for each period compared to the nominal underlying event evaluated for the entire dataset is shown in Figure~\ref{fig:weighted_runs}, and it can be seen that the UE is stable throughout the data taking period.
 %The systematic uncertainty associated with the run dependence was included in the calculation of the systematic uncertainty on the result.
 
  \begin{figure}[h]
